# src/main/java/com/example/meetpick/controller/MeetingController.java
@@ -9,7 +9,7 @@ import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/api/meetings")
+@RequestMapping("/meetings")
 public class MeetingController {
 
     private final MeetingService meetingService;
