# src/main/java/com/example/meetpick/controller/ResultController.java
@@ -10,12 +10,12 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/api/meetings")
+@RequestMapping("/result")
 public class ResultController {
 
     private final ResultService resultService;
 
-    @GetMapping("/{meetingId}/result")
+    @GetMapping("/{meetingId}")
     public ResultResponseDTO getResult(
             @PathVariable String meetingId
     ) {
